feat/fe 리덕스추가

--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -112,3 +112,13 @@ body {
       text-shadow: none;
   }    
 }
+
+.swiper {
+  width : 77%
+}
+
+.swiper .swiper-pagination-bullet {
+  background-color: #000;
+  margin: 0 10px !important;
+}
+
