--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -181,3 +181,21 @@ ul.pagination li a.active {
   color: #337ab7;
 }
 
+.treasure-box {
+  
+  animation: shake 2s infinite;
+}
+
+@keyframes shake {
+  0% { transform: rotate(0deg); }
+  10% { transform: rotate(-5deg); }
+  20% { transform: rotate(5deg); }
+  30% { transform: rotate(-5deg); }
+  40% { transform: rotate(5deg); }
+  50% { transform: rotate(-2.5deg); }
+  60% { transform: rotate(2.5deg); }
+  70% { transform: rotate(-2.5deg); }
+  80% { transform: rotate(2.5deg); }
+  90% { transform: rotate(-1deg); }
+  100% { transform: rotate(0deg); }
+}
