--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -86,31 +86,14 @@ body {
   display: none;
 }
 
-#neon {
-  color: #fff;
-  animation: flicker 1.5s infinite alternate;
-  text-shadow:0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+@keyframes glitter {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
 }
 
-@keyframes flicker {
-    
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-
-      text-shadow:
-      0 0 4px #fff,
-      0 0 11px #fff,
-      0 0 19px #fff,
-      0 0 40px #0fa,
-      0 0 80px #0fa,
-      0 0 90px #0fa,
-      0 0 100px #0fa,
-      0 0 150px #0fa;
-  
-  }
-  
-  20%, 24%, 55% {        
-      text-shadow: none;
-  }    
+#glitter-animation {
+  animation: glitter 1s infinite;
 }
 
 .swiper {
