--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* 404 Font */
+@font-face {
+  font-family: 'ErrFont';
+  font-weight: 100;
+  src : url('../../public/fonts/error404.otf') format('opentype');
+}
+
 /* SUIT Font */
 @font-face {
   font-family: 'SUIT';
@@ -75,6 +83,7 @@
 :root {
   --suit-font: 'SUIT';
   --cookie-font: 'CookieRun';
+  --error-font : 'ErrFont';
 }
 
 body {
