--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -194,3 +194,18 @@ ul.pagination li a.active {
 
 
 
+.swiper-button-prev,
+.swiper-button-next {
+  background-color: #fff;
+  opacity: 0.7;
+  padding: 35px 20px;
+  border-radius: 20px;
+  color: black !important;
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 3rem !important;
+  font-weight: 600 !important;
+}
+
